Add warning about JDK 16+ to readme